RESOLVED FIXED302944
[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/css-inline/text-box-trim/text-box-trim-block-in-inline-start-002.html
https://bugs.webkit.org/show_bug.cgi?id=302944
Summary [blocks-in-inline] Fix imported/w3c/web-platform-tests/css/css-inline/text-bo...
alan
Reported 2025-11-21 07:05:42 PST
ssia
Attachments
Patch (8.11 KB, patch)
2025-11-21 07:10 PST, alan
no flags
[fast-cq]Patch (8.11 KB, patch)
2025-11-21 07:14 PST, alan
no flags
alan
Comment 1 2025-11-21 07:10:51 PST
alan
Comment 2 2025-11-21 07:14:43 PST
Created attachment 477463 [details] [fast-cq]Patch
EWS
Comment 3 2025-11-21 09:04:28 PST
Commit message contains (OOPS!) and no valid reviewer found, blocking PR #None. Details: [Build #2757](https://ews-build.webkit.org/#/builders/27/builds/2757)
EWS
Comment 4 2025-11-21 10:26:42 PST
Committed 303403@main (c0d7bb280707): <https://commits.webkit.org/303403@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477463 [details].
Radar WebKit Bug Importer
Comment 5 2025-11-21 10:27:14 PST
Note You need to log in before you can comment on or make changes to this bug.