[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/css-inline/text-box-trim/text-box-trim-block-in-inline-start-002.html https://bugs.webkit.org/show_bug.cgi?id=302944

Reviewed by Antti Koivisto.

TextBoxTrimStartDisabler turns off trimming start on blocks when they are not
on the first formatted line.
With continuation this was implicitly done through the render tree structure (see shouldIgnoreAsFirstLastFormattedLineContainer).

Test: fast/inline/blocks-in-inline-with-text-box-trim-start.html

* LayoutTests/fast/inline/blocks-in-inline-with-text-box-trim-start-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-with-text-box-trim-start.html: Added.
* Source/WebCore/layout/integration/LayoutIntegrationFormattingContextLayout.cpp:
(WebCore::LayoutIntegration::layoutWithFormattingContextForBlockInInline):
* Source/WebCore/rendering/RenderBlockFlow.h:
* Source/WebCore/rendering/TextBoxTrimmer.cpp:
(WebCore::TextBoxTrimStartDisabler::TextBoxTrimStartDisabler):
(WebCore::TextBoxTrimStartDisabler::~TextBoxTrimStartDisabler):
* Source/WebCore/rendering/TextBoxTrimmer.h:

Canonical link: https://commits.webkit.org/303403@main