Source/WebCore/layout/integration/LayoutIntegrationFormattingContextLayout.cpp
@@ -34,6 +34,7 @@
 #include "RenderFlexibleBox.h"
 #include "RenderLayoutState.h"
 #include "RenderObjectInlines.h"
+#include "TextBoxTrimmer.h"
 
 namespace WebCore {
 namespace LayoutIntegration {
@@ -116,7 +117,13 @@ void layoutWithFormattingContextForBlockInInline(const Layout::ElementBox& block
         return RenderBlockFlow::MarginInfo { marginState.canCollapseWithChildren, marginState.canCollapseMarginBeforeWithChildren, marginState.canCollapseMarginAfterWithChildren, marginState.quirkContainer, marginState.atBeforeSideOfBlock, marginState.atAfterSideOfBlock, marginState.hasMarginBeforeQuirk, marginState.hasMarginAfterQuirk, marginState.determinedMarginBeforeQuirk, marginState.positiveMargin, marginState.negativeMargin };
     };
 
-    auto positionAndMargin = rootBlockContainer.layoutBlockChildFromInlineLayout(blockRenderer, blockLogicalTopLeft.y(), marginInfoForBlock());
+    auto positionAndMargin = RenderBlockFlow::BlockPositionAndMargin { };
+    if (inlineLayoutState.lineCount()) {
+        auto textBoxTrimStartDisabler = TextBoxTrimStartDisabler { blockRenderer };
+        positionAndMargin = rootBlockContainer.layoutBlockChildFromInlineLayout(blockRenderer, blockLogicalTopLeft.y(), marginInfoForBlock());
+    } else
+        positionAndMargin = rootBlockContainer.layoutBlockChildFromInlineLayout(blockRenderer, blockLogicalTopLeft.y(), marginInfoForBlock());
+
     if (blockRenderer.isSelfCollapsingBlock()) {
         // FIXME: This gets replaced by "handling the after side of the block with margin".
         positionAndMargin.marginInfo.setMargin({ }, { });
